{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "CharacterControls",
            "id": "59133b36-0575-4696-819a-74dda6ad6117",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "d9fd4e85-3466-49ce-b997-ebc2ee33ab78",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "2a656ef2-2e88-4ec0-99fd-9a0e72800afd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5f6db3b4-b7a0-4f41-9107-5c1603e69749",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "545b1e61-1a04-482d-b46a-28e52d7f3a3c",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}